--- a/style.css
+++ b/style.css
@@ -1,77 +1,157 @@
+:root{
+    --cs_black: black;
+    --cs_red: #9d1917;
+    --cs_grey: #dfdfdf;
+}
 body{
-    background-color: rgb(223 223 223);
-    color: black;
+    font-family: 'Nanum Myeongjo', serif;
+    font-style: italic;
+    font-weight: 900;
+    background-color: var(--cs_grey);
+    color: var(--cs_black);
+}
+a:hover{
+    color: var(--cs_red);
 }
 .cs_text_grey{
-    color: rgb(223 223 223);
+    color: var(--cs_grey);
+}
+.cs_bg_grey{
+    background-color: var(--cs_grey);
 }
 .cs_bg_red{
-    background-color: rgb(157, 25, 23);
+    background-color: var(--cs_red);
 }
 .cs_text_red{
-    color: rgb(157, 25, 23);
+    color: var(--cs_red);
 }
 .cs_text_black{
-    color: black;
+    color: var(--cs_black);
 }
-.cs_page{
-    /* height: 100vh; */
-    
-}
+/* section */
 section{
-    margin: 2rem 0;
+    padding: 2.5rem 0;
     line-height: 1.5rem;
 }
 h1{
-    /* font-size: 2rem; */
+    font-size: 2rem;
     font-weight: 900;
 }
 p{
-    margin-bottom: 0;
-}
-.cs_bold_p{
-    /* font-size: 1.1rem; */
-    font-weight: 700;
-}
-.cs_bolder{
-    font-weight: 900;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 .cs_description{
-    font-size: 0.9rem;
-    font-weight: 500;
-    margin-top: -7px;
+    font-size: 1.1rem;
 }
+.cs_price:after{
+    content: '\20AC';
+    font-size: 1rem;
+}
+/* hamburger menu */
+#menu_list{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+}
+.cs_bar {
+    height: 100%;
+    padding-right: 20px;
+    float: right;
+    color: var(--cs_red);
+    font-size: 3rem;
+}
+.hamburger-menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 40px;
+    background-color: var(--cs_grey);
+    border-radius: 0 0 0 15px;
+    box-shadow: -5px 7px 15px #a1a1a1;
+}
+.hamburger-show{
+    animation: show-up 0.4s linear;
+}
+@keyframes show-up{
+    from {
+        right: -250px;
+    }
+    to {
+        right: 0;
+    }
+}
+.cs_active{
+    display: block;
+}
+.hamburger-menu ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+.hamburger-menu ul li a {
+    color: var(--cs_red);
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+.close {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 0;
+    color: var(--cs_red);
+    font-size: 3rem;
+    text-decoration: none;
+}
+/* logo page */
 #cs_first{
     position: relative;
-    background: rgba(157,25,23);
     background: linear-gradient(90deg, rgba(157,25,23) 50%, rgb(223 223 223) 50%);
     height: 100vh;
 }
 #cs_first .cs_menu{
     position: absolute;
-    bottom: 150px;
-    right: -145px;
+    bottom: 140px;
+    right: -100px;
     -ms-transform: rotate(270deg); 
     transform: rotate(270deg);
 }
 #cs_first h1{
     font-size: 10rem;
 }
-#cs_page_first{
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgb(223 223 223)30%, rgba(127,25,23,1) 30%, rgba(127,25,23,1) 70%, rgb(223 223 223) 70%);
-}
-#pinze h1, #percorsi h1, #starters h1{
-    /* padding-top: 50px; */
-}
 .img_wrapper{
     margin: auto;
     max-width: 760px;
 }
 #drink{
-    padding: 0.5rem 0;
     background: rgb(223 223 223);
     background: linear-gradient(90deg, rgb(223 223 223) 50%, rgba(157,25,23) 50%);
+}
+#cocktail h1{
+    font-size: 2rem;
+    background: -webkit-linear-gradient(90deg, black 50%, rgba(157,25,23) 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+#avvertenze{
+    margin-top: 50px;
+}
+#avvertenze h6{
+    font-weight: 900;
+}
+#avvertenze p{
+    font-size: 0.9rem;
+}
+#avvertenze>div{
+    width: 80%;
+    border-radius: 20px;
+    padding: 5px;
 }
 .debug{
     padding: 20px;
